# StassLea_FYP

./: Door_seq.txt  README.md  bash.txt  main.sh
devel/: .catkin  setup.sh
devel/include/fremen/: EstimateOctomap.h  EstimateOctomapRequest.h  EstimateOctomapResponse.h  EvaluateGrid.h  EvaluateGridRequest.h  EvaluateGridResponse.h  RecoverOctomap.h  RecoverOctomapRequest.h  RecoverOctomapResponse.h  RetrieveOctomap.h  RetrieveOctomapRequest.h  RetrieveOctomapResponse.h  SaveGrid.h  SaveGridRequest.h  SaveGridResponse.h  UpdateGrid.h  UpdateGridRequest.h  UpdateGridResponse.h  froctomapAction.h  froctomapActionFeedback.h  froctomapActionGoal.h  froctomapActionResult.h  froctomapFeedback.h  froctomapGoal.h  froctomapResult.h  informationAction.h  informationActionFeedback.h  informationActionGoal.h  informationActionResult.h  informationFeedback.h  informationGoal.h  (+1 more)
model_editor_models/FYP_house/: model.config  model.sdf
model_editor_models/turtlebot3_house/: model.sdf
src/fyp_nav_rvis/: CMakeLists.txt  package.xml
src/fyp_simulation/: CMakeLists.txt  package.xml
src/fyp_simulation/launch/: Gazebo.launch  Ocotmap_generation.launch  fyp_spawn.launch  my_world.launch  rrt.launch
src/fyp_simulation/map/: 1_map.pgm  1_map.yaml  2_map.pgm  2_map.yaml  3_map.pgm  3_map.yaml
src/fyp_simulation/src/: CVA_sequencer.cpp
src/fyp_simulation/worlds/: 1_world.world  2_world.world  3_world.world  FYP_world.world  empty_world.world  house3_world.world
src/turtlebot_exploration/: CMakeLists.txt
src/turtlebot_exploration_rviz/: CMakeLists.txt  package.xml
(+221 files in other folders)
